# thirdparty_jxrlib

./: CMakeLists.txt
image/encode/: strenc.c
image/sys/: adapthuff.c  common.h  strcodec.c  strcodec.h  windowsmediaphoto.h
jxrencoderdecoder/: JxrEncApp.c
jxrgluelib/: JXRGlueJxr.c  JXRMeta.h
